--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -2152,6 +2152,11 @@
       color: #003c95;
       float: left;
       margin-left: 30px;
+      &:hover{
+        color: #000000;
+        text-decoration: none;
+        outline: 1px solid #b80000;
+      }
       i {
         float: left;
         margin-right: 12px;
@@ -2191,7 +2196,7 @@
     font-family: 'robotoBlack';
     color: #393939;
     min-height: 164px;
-    h3 {
+    h4 {
       font-size: 42px;
       line-height: 42px;
       margin-top: 70px;
