--- a/sass/product_block.scss
+++ b/sass/product_block.scss
@@ -326,6 +326,12 @@
         box-sizing: border-box;
         padding-left: 14px;
         padding-right: 15px;
+        .art {
+          float: left;
+          font: 14px/27px  'Roboto-BoldItalic';
+          color: #919191;
+          font-style: italic;
+        }
         .name {
           float: left;
           width: 52.81%;
