Начата третья часть правок

--- a/css/mini_footer.css
+++ b/css/mini_footer.css
@@ -227,8 +227,11 @@
       width: 100%;
       font: 15px/20px 'Georgia-BoldItalic';
       color: #646464;
-      margin: 5px 0px;
+      margin: 30px 0px;
       text-decoration: underline; }
+      .mini_footer_brends_price:hover {
+        color: #620909;
+        text-decoration: none; }
       .mini_footer_brends_price span {
         font: 15px/20px Verdana;
         font-weight: bold;
