--- a/sass/comment.scss
+++ b/sass/comment.scss
@@ -310,6 +310,11 @@
           padding-bottom: 20px;
           .all_read{
             display: block;
+            color: #620909;
+            &:hover{
+              color: #003C95;
+              outline: 1px solid #003C95;
+            }
           }
         }
         .main_wrap{
@@ -534,7 +539,8 @@
             text-decoration: underline;
             display: none;
             &:hover{
-              color: #620909;
+              color: #003C95;
+              outline: #003C95;
             }
           }
         }
@@ -547,7 +553,7 @@
           p{
             width: 100%;
             float: left;
-            font: 12px/18px  'robotolight';
+            font: 14px/18px "RobotoSlab-Light";
             color: #282828;
             padding-top: 10px;
             img{
