--- a/css/header_mini.css
+++ b/css/header_mini.css
@@ -6,7 +6,10 @@
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 88; }
+  z-index: 88;
+  opacity: 0.7; }
+  .header_mini:hover {
+    opacity: 1; }
   .header_mini .ring_wrap {
     position: relative;
     width: auto;
