--- a/css/modal.css
+++ b/css/modal.css
@@ -2141,7 +2141,11 @@
         .comment_block .individuals_block_slide_content .big {
           padding-bottom: 20px; }
           .comment_block .individuals_block_slide_content .big .all_read {
-            display: block; }
+            display: block;
+            color: #620909; }
+            .comment_block .individuals_block_slide_content .big .all_read:hover {
+              color: #003C95;
+              outline: 1px solid #003C95; }
         .comment_block .individuals_block_slide_content .main_wrap {
           height: 54px; }
           @media (max-height: 750px) {
@@ -2321,7 +2325,8 @@
             text-decoration: underline;
             display: none; }
             .comment_block .entity_wrap_slider_slide .text_block .all_read:hover {
-              color: #620909; }
+              color: #003C95;
+              outline: #003C95; }
         .comment_block .entity_wrap_slider_slide .text_wrap {
           width: 100%;
           float: left;
@@ -2331,7 +2336,7 @@
           .comment_block .entity_wrap_slider_slide .text_wrap p {
             width: 100%;
             float: left;
-            font: 12px/18px  'robotolight';
+            font: 14px/18px "RobotoSlab-Light";
             color: #282828;
             padding-top: 10px; }
             .comment_block .entity_wrap_slider_slide .text_wrap p img {
