--- a/css/style.css
+++ b/css/style.css
@@ -1018,7 +1018,10 @@ table {
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 88; }
+  z-index: 88;
+  opacity: 0.7; }
+  .header_mini:hover {
+    opacity: 1; }
   .header_mini .ring_wrap {
     position: relative;
     width: auto;
@@ -3580,7 +3583,11 @@ table {
         .comment_block .individuals_block_slide_content .big {
           padding-bottom: 20px; }
           .comment_block .individuals_block_slide_content .big .all_read {
-            display: block; }
+            display: block;
+            color: #620909; }
+            .comment_block .individuals_block_slide_content .big .all_read:hover {
+              color: #003C95;
+              outline: 1px solid #003C95; }
         .comment_block .individuals_block_slide_content .main_wrap {
           height: 54px; }
           @media (max-height: 750px) {
@@ -3760,7 +3767,8 @@ table {
             text-decoration: underline;
             display: none; }
             .comment_block .entity_wrap_slider_slide .text_block .all_read:hover {
-              color: #620909; }
+              color: #003C95;
+              outline: #003C95; }
         .comment_block .entity_wrap_slider_slide .text_wrap {
           width: 100%;
           float: left;
@@ -3770,7 +3778,7 @@ table {
           .comment_block .entity_wrap_slider_slide .text_wrap p {
             width: 100%;
             float: left;
-            font: 12px/18px  'robotolight';
+            font: 14px/18px "RobotoSlab-Light";
             color: #282828;
             padding-top: 10px; }
             .comment_block .entity_wrap_slider_slide .text_wrap p img {
@@ -7255,15 +7263,15 @@ table {
                   margin-bottom: 10px; } }
               .section_product_wrap__manufactures__factory_block__brend_text .description .read_m {
                 display: inline-block;
-                width: 100%;
-                text-align: right;
+                float: right;
                 font-size: 10px;
                 color: #82000c; }
                 @media (max-width: 768px) {
                   .section_product_wrap__manufactures__factory_block__brend_text .description .read_m {
                     display: none; } }
                 .section_product_wrap__manufactures__factory_block__brend_text .description .read_m:hover {
-                  color: #25613c; }
+                  color: #003C95;
+                  outline: 1px solid #003C95; }
             .section_product_wrap__manufactures__factory_block__brend_text .adres {
               width: 100%;
               margin-bottom: 15px; }
@@ -8479,8 +8487,11 @@ table {
       width: 100%;
       font: 15px/20px 'Georgia-BoldItalic';
       color: #646464;
-      margin: 5px 0px;
+      margin: 30px 0px;
       text-decoration: underline; }
+      .mini_footer_brends_price:hover {
+        color: #620909;
+        text-decoration: none; }
       .mini_footer_brends_price span {
         font: 15px/20px Verdana;
         font-weight: bold;
