--- a/sass/header_mini.scss
+++ b/sass/header_mini.scss
@@ -18,6 +18,10 @@
   top: 0px;
   left: 0px;
   z-index: 88;
+  opacity: 0.7;
+  &:hover{
+    opacity: 1;
+  }
   .ring_wrap{
     position: relative;
     width: auto;
