--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -81,7 +81,7 @@
           .name {
             display: none;
           }
-          a {
+          .logo{
             display: block;
             font: 26px/26px Verdana;
             font-weight: bold;
