Исправлен слайдер по оценке

--- a/css/header.css
+++ b/css/header.css
@@ -728,6 +728,7 @@
         .header__user_info_info .time .timer {
           position: absolute;
           width: 270px;
+          overflow: hidden;
           float: left;
           top: 100%;
           left: 0;
@@ -739,8 +740,7 @@
           display: none; }
           @media (max-width: 770px) {
             .header__user_info_info .time .timer {
-              left: auto;
-              right: 0px; } }
+              left: auto; } }
           .header__user_info_info .time .timer .zag {
             width: 100%;
             box-sizing: border-box;
