--- a/css/modal.css
+++ b/css/modal.css
@@ -2116,10 +2116,18 @@
             display: block;
             width: 40%;
             margin-top: 15.5px;
-            margin-right: 5%; }
+            margin-right: 5%;
+            position: relative; }
             @media (max-height: 750px) {
               .comment_block .individuals_block_slide_header_yandex_block_baner_yandex {
                 margin-top: 5.5px; } }
+            .comment_block .individuals_block_slide_header_yandex_block_baner_yandex a {
+              position: absolute;
+              top: 5px;
+              right: 10%;
+              display: block;
+              width: 20px;
+              height: 20px; }
             .comment_block .individuals_block_slide_header_yandex_block_baner_yandex img {
               max-width: 100%; }
       .comment_block .individuals_block_slide_content {
@@ -2127,7 +2135,7 @@
         width: 100%;
         padding-top: 20px; }
         .comment_block .individuals_block_slide_content p {
-          font: 12px/18px 'robotolight';
+          font: 14px/18px 'RobotoSlab-Light';
           color: #282828;
           letter-spacing: 0.5px; }
         .comment_block .individuals_block_slide_content .text_block {
