--- a/sass/comment.scss
+++ b/sass/comment.scss
@@ -259,9 +259,19 @@
             width: 40%;
             margin-top: 15.5px;
             margin-right: 5%;
+            position: relative;
             @media(max-height: 750px){
               margin-top: 5.5px;
             }
+            a{
+              position: absolute;
+              top: 5px;
+              right: 10%;
+              display: block;
+              width: 20px;
+              height: 20px;
+            }
+
 
             img{
               max-width: 100%;
@@ -274,7 +284,7 @@
         width: 100%;
         padding-top: 20px;
         p{
-          font:12px/18px 'robotolight';
+          font:14px/18px 'RobotoSlab-Light';
           color: #282828;
           letter-spacing: 0.5px;
         }
